--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 Sheridan College
 Course: SYST 10199
 Professor: Ellen Bajcar
-Author: Mariel Martinez
+Author: Mariel Martinez, Nicole Provan
 
 Date created: June 11, 2018
 Version: 1.0
